--- a/templates/header.html
+++ b/templates/header.html
@@ -32,7 +32,7 @@
                 </ul>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Lista/Produto" aria-label="Search">
+              <input class="form-control me-2" type="search" placeholder="Pequisar" aria-label="Search">
               <button class="btn btn-outline-primary" type="submit">Pesquisar</button>
             </form>
           </div>
