--- a/templates/lista/listas.html
+++ b/templates/lista/listas.html
@@ -26,7 +26,7 @@
                     <td> Fechado </td>
                 {% endif %}
                 <td><a href="/alterar_lista/{{ l.id_lista }}">Alterar</a></td>
-                <td><a href="">ADD itens</a></td>
+                <td><a href="/itens_lista">ADD itens</a></td>
             </tr>
             {% endfor %}
         </table>
