--- a/templates/usuario/cadastro_usuario.html
+++ b/templates/usuario/cadastro_usuario.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block titulo %}Cadastro de Produto{% endblock %}
+{% block titulo %}Usuario{% endblock %}
 
 {% block conteudo %}
-    <main class="container-fluid">
-        <h2 class="mt-3">Cadastro de Produto</h2>
+    <main class="container px-5 ">
+        <h2 class="mt-3">Usuario</h2>
         <form class="row g-3 needs-validation" method="post" action="/usuario/post_cadastrar_usuario" novalidate>
             <div class="col-md-12">
                 <label for="nome" class="form-label">Nome:</label>
@@ -29,6 +29,7 @@
             </div>
             <div class="col-12">
               <button class="btn btn-primary" type="submit">Cadastrar</button>
+              <a href="/" class="btn btn-danger">Voltar</a>
             </div>
         </form>
     </main>
