--- a/templates/itens_lista/listar_produtos.html
+++ b/templates/itens_lista/listar_produtos.html
@@ -6,7 +6,7 @@
     <main class="container-fluid">
         <div class="d-flex justify-content-between mt-3">
             <h2>Colocar produto na lista</h2>
-            <a href="/produto/cadastrar_produto"> Cadastrar Produto</a>
+            <a href="/produto/cadastrar_produto" class="btn btn-primary"> Cadastrar Produto</a>
         </div>
         <hr>
         <table class="table">
@@ -25,12 +25,17 @@
                 <td style="text-align: center;">{{ p.id_categoria }}</td>
                 <td style="text-align: center;">R$:{{ p.valor_produto }}</td>
                 <td style="text-align: center;" > <div>
-                    <input type="checkbox" class="btn-check" id="btn-check-outlined" autocomplete="off">
-                    <label class="btn btn-outline-primary" for="btn-check-outlined">Check</label>
+                    <input type="checkbox" class="btn-check" id="{{ p.id_produto }}" autocomplete="off">
+                    <label class="btn btn-outline-primary" for="{{ p.id_produto }}">Check</label>
                 </div>  
             </td>
             </tr>
             {% endfor %}
         </table>
+        <div class="row">
+            <div class="col-12 d-flex justify-content-end">
+                <a href="/itens_lista/categorias" class="btn btn-danger"> Voltar</a>
+            </div>
+        </div>
     </main>
 {% endblock %}
