--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <div class="p-3 mt-5 ">
     <div class="d-none"></div>
 </div>
-<footer class="bd-footer fixed-bottom p-3 mt-3" style="background-color: #accac5">
+<footer class="bd-footer fixed-bottom" style="background-color: #accac5">
     <div class="d-flex justify-content-center mt-3">
         <hr>
         <p>Gabriel Louzada, Gustavo Nassif, Fabio Miracema, Bruno do vale Copyright &copy; 2024</p>
