--- a/templates/lista/listas.html
+++ b/templates/lista/listas.html
@@ -25,7 +25,7 @@
                 {% else %}
                     <td> Fechado </td>
                 {% endif %}
-                <td><a href="/alterar_lista/{{ l.id_lista }}"class="btn btn-primary">Alterar</a></td>
+                <td><a href="/lista/abrir/{{ l.id_lista }}"class="btn btn-primary">Abrir Lista</a></td>
                 <td>
                     <a href="/itens_lista/categorias/{{ l.id_lista }}"class="btn btn-primary">ADD Itens</a>
                 </td>
