Confecção do carroucel pasta static

--- a/templates/categoria/cadastro_categoria.html
+++ b/templates/categoria/cadastro_categoria.html
@@ -15,7 +15,7 @@
                     OK
                     </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 mt-3">
                     <button class="btn btn-primary" type="submit">Cadastrar</button>
                     <a href="/categorias" class="btn btn-danger mx-2"> Voltar</a>
                 </div>
