--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="/usuario/entrar">Usuario</a></li>
-                  <li><a class="dropdown-item" href="#">Sobre</a></li>
+                  <li><a class="dropdown-item" href="/contato">Contato</a></li>
                 </ul>
             </ul>
             <form class="d-flex">
