--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,40 @@
 {% extends "base.html" %}
     {% block conteudo %}
     <main class="container-fluid">
-        <div class="container-fluid ">
-            <div id="carouselExample" class="carousel slide bg-dark">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+      <h1>Anuncie seu supermercado aqui! </h1>
+      <hr>
+        <div class="container-fluid mt-5">
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <!-- trocar o temporizador -->
+              <div class="carousel-item active" data-bs-interval="5">
+                <img src="/static/img/00001.jpg" class="d-block w-100">
               </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="/static/img/00002.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/img/00003.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/img/00004.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/img/00005.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="/static/img/00006.jpg" class="d-block w-100">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
     </main>
 {% endblock %}
