--- a/templates/produto/cadastro_produto.html
+++ b/templates/produto/cadastro_produto.html
@@ -33,7 +33,8 @@
           </div>
         </div>
         <div class="col-12">
-          <button class="btn btn-primary" type="submit">Cadastrar</button>
+          <button class="btn btn-primary mx-3" type="submit">Cadastrar</button>
+          <a href="/" class="btn btn-danger"> Voltar</a>
         </div>
     </form>
 </main>
