--- a/templates/produto/listar_produtos.html
+++ b/templates/produto/listar_produtos.html
@@ -6,7 +6,7 @@
     <main class="container-fluid">
         <div class="d-flex justify-content-between mt-3">
             <h2>Produtos</h2>
-            <a href="/produto/cadastrar_produto"> Cadastrar Produto</a>
+            <a href="/produto/cadastrar_produto" class="btn btn-primary"> Cadastrar Produto</a>
         </div>
         <hr>
         <table class="table">
@@ -24,9 +24,14 @@
                 <td style="text-align: center;">{{ p.nome_produto }}</td>
                 <td style="text-align: center;">{{ p.id_categoria }}</td>
                 <td style="text-align: center;">R$:{{ p.valor_produto }}</td>
-                <td style="text-align: center;" ><a href="/produto/alterar_produto/{{ p.id_produto }}">alterar</a></td>
+                <td style="text-align: center;" ><a href="/produto/alterar_produto/{{ p.id_produto }}" class="btn btn-primary">alterar</a></td>
             </tr>
             {% endfor %}
         </table>
+        <div class="row">
+            <div class="col-12 mb-5 d-flex justify-content-end">
+                <a href="/" class="btn btn-danger"> Voltar</a>
+            </div>
+        </div>
     </main>
 {% endblock %}
