procedido alterações em rotas e acerto no crud do itens lista

--- a/templates/itens_lista/listar_produtos.html
+++ b/templates/itens_lista/listar_produtos.html
@@ -33,7 +33,7 @@
 
                     </div>
                     <div class="col-12">
-                        <button class="btn btn-primary mx-3" type="submit">ADD a lista</button>
+                        <button class="btn btn-primary mx-3" type="submit"><i class="bi bi-cart-plus"></i></button>
                     </div>
                 </div>
             </form>
