--- a/templates/lista/listas.html
+++ b/templates/lista/listas.html
@@ -9,26 +9,29 @@
             <a href="/lista/cadastrar_lista" class="btn btn-primary"> Cadastrar Lista</a>
         </div>
         <table class="table">
-            <tr>
+            <!-- <tr>
                 <th>#</th>
                 <th>Estabelecimento</th>
                 <th>Status</th>
-                <th>*</th>
-                <th>*</th>
-            </tr>
+                <th>Abrir</th>
+                <th>Alterar</th>
+                <th>Adicionar</th>
+                <th>Excluir</th>
+            </tr> -->
+            <hr>
             {% for l in listas %}
             <tr>
                 <td>{{ l.id_lista }}</td>
                 <td>{{ l.estabelecimento }}</td>
-                {% if l.status_lista == 0 %}
+                {% if l.status_lista == 1 %}
                     <td> Aberto </td>
                 {% else %}
                     <td> Fechado </td>
                 {% endif %}
-                <td><a href="/lista/abrir/{{ l.id_lista }}"class="btn btn-primary">Abrir Lista</a></td>
-                <td>
-                    <a href="/itens_lista/categorias/{{ l.id_lista }}"class="btn btn-primary">ADD Itens</a>
-                </td>
+                <td><a href="/lista/abrir/{{ l.id_lista }}"class="btn btn-primary"><i class="bi bi-basket"></i></a></td>
+                <td><a href="/lista/alterar_lista/{{l.id_lista}}"class="btn btn-secondary"><i class="bi bi-pencil"></i></a></td>
+                <td><a href="/itens_lista/categorias/{{ l.id_lista }}"class="btn btn-success"><i class="bi bi-bag-plus"></i></a></td>
+                <td><a href="/lista/excluir/{{ l.id_lista }}"class="btn btn-danger"><i class="bi bi-trash"></i></a>
             </tr>
             {% endfor %}
         </table>
