--- a/templates/produto/alterar_produto.html
+++ b/templates/produto/alterar_produto.html
@@ -34,7 +34,8 @@
           </div>
         </div>
         <div class="col-12">
-          <button class="btn btn-primary" type="submit">Cadastrar</button>
+          <button class="btn btn-primary" type="submit"><i class="bi bi-check2"></i></button>
+          <a href="/lista" class="btn btn-danger"><i class="bi bi-arrow-left-square"></i></a>
         </div>
     </form>
 </main>
