--- a/templates/header.html
+++ b/templates/header.html
@@ -33,7 +33,7 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-              <button class="btn btn-outline-primary" type="submit">Pesquisar</button>
+              <button class="btn btn-outline-primary" type="submit"><i class="bi bi-search"></i></button>
             </form>
           </div>
         </div>
