--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">Promoções</a>
+                <a class="nav-link text-light" href="/promocao">Promoções</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
