--- a/templates/produto/um_produto.html
+++ b/templates/produto/um_produto.html
@@ -23,7 +23,7 @@
                 <td style="text-align: center;">{{ produto.nome_produto }}</td>
                 <td style="text-align: center;">{{ produto.id_categoria }}</td>
                 <td style="text-align: center;">R$:{{ produto.valor_produto }}</td>
-                <td style="text-align: center;" ><a href="/alterar_produto/{{ produto.id_produto }}">alterar</a></td>
+                <td style="text-align: center;" ><a href="/alterar_produto/{{ produto.id_produto }}"><i class="bi bi-pencil"></i></a></td>
             </tr>
         </table>
 
