--- a/templates/produto/listar_produtos.html
+++ b/templates/produto/listar_produtos.html
@@ -17,14 +17,13 @@
                 <td style="text-align: center;">Valor Produto</td>
                 <td style="text-align: center;">*</td>
             </tr>
-            <!-- faz uma iteração pelos produtos enviados pela rota -->
             {% for p in produtos %}
             <tr>
                 <td>{{ p.id_produto }}</td>
                 <td style="text-align: center;">{{ p.nome_produto }}</td>
                 <td style="text-align: center;">{{ p.id_categoria }}</td>
                 <td style="text-align: center;">R$:{{ p.valor_produto }}</td>
-                <td style="text-align: center;" ><a href="/produto/alterar_produto/{{ p.id_produto }}" class="btn btn-primary">alterar</a></td>
+                <td style="text-align: center;" ><a href="/produto/alterar_produto/{{ p.id_produto }}" class="btn btn-primary"><i class="bi bi-pencil"></i></a></td>
             </tr>
             {% endfor %}
         </table>
