--- a/templates/promocao/promocao.html
+++ b/templates/promocao/promocao.html
@@ -4,27 +4,33 @@
 
 {% block conteudo %}
 <div class="row mt-3 container-fluid d-flex justify-content-between">
-    <div class="col-11">
+    <div class="col-9 col-md-11">
         <h2>Promoções</h2>
         <p>Todas as promoções inseridas aqui vem das listas de outros usuarios !</p>
     </div>
-    <div class="col-1">
+    <div class="col-2 col-md-1">
         <a href="/" class="btn btn-danger"><i class="bi bi-arrow-left-square"></i></a>
     </div>
 </div>
 <hr>
 <div>
-    <table class="table">
+    <table class="table table-sm">
         <tr>
             <th>#</th>
-            <th>id_produto</th>
-            <th>valor_promocao</th>
-            <th>Estabelecimento</th>
+            <th>Produtos</th>
+            <th>Promoções</th>
+            <th>Estabelecimentos</th>
+            <th>*</th>
         </tr>
-        
+        {% for p in promocao%}
         <tr>
-            <td></td>
+            <td>{{p.id_produto}}</td>
+            <td>{{p.nome_produto}}</td>
+            <td>{{p.valor_promocao}}</td>
+            <td>{{p.estabelecimento}}</td>
+            <td><a href="" class="btn btn-danger p-1 p-sm-2"><i class="bi bi-bookmark-x"></i></a></td>
         </tr>
+        {% endfor %}
     </table>
 </div>
 {% endblock %}
