--- a/templates/usuario/cadastrar_usuario.html
+++ b/templates/usuario/cadastrar_usuario.html
@@ -5,7 +5,8 @@
 {% block conteudo %}
     <main class="container px-5 ">
         <h2 class="mt-3">Usuario</h2>
-        <form class="row g-3 needs-validation" method="post" action="/usuario/post_cadastrar_usuario" novalidate>
+        <hr>
+        <form class="row g-3 needs-validation col-12 col-md-6 col-xl-5" method="post" action="/usuario/post_cadastrar_usuario" novalidate>
             <div class="col-md-12">
                 <label for="nome" class="form-label">Nome:</label>
                 <input type="text" name="nome" class="form-control" id="nome" placeholder="Bruno do Vale" required>
@@ -22,14 +23,14 @@
             </div>
             <div class="col-md-12">
                 <label for="senha" class="form-label">Senha:</label>
-                <input type="password" name="senha" class="form-control" id="senha" placeholder="123" required>
+                <input type="password" name="senha" class="form-control" id="senha" placeholder="*********" required>
                 <div class="valid-feedback">
                   ok
                 </div>
             </div>
             <div class="col-12">
-              <button class="btn btn-primary" type="submit">Cadastrar</button>
-              <a href="/" class="btn btn-danger">Voltar</a>
+              <button class="btn btn-primary" type="submit">Enviar</button>
+              <a href="/" class="btn btn-danger"><i class="bi bi-arrow-left-square"></i></a>
             </div>
         </form>
     </main>
